# shadoe-qt

./: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  README  README.md  TODO  version.h.in
doc/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
